# buddy-backend

./: .coderabbit.yaml  .gitignore  README.md  package.json
mbti/: .gitignore  PersonaForge_정리본.md  README.md  SETUP.md  install.sh  pyproject.toml  requirements.txt  start-server.bat  start.ps1  start.sh
mbti/benchmarks/: RESULTS_LOG.md  amplify_experiment_20260626.md  assistant_style_20260626.md  behavioral_ab_20260626.md  behavioral_all16_20260626.md  curated_all16_20260626.md  curated_v2_all16_20260626.md  curated_v3_all16_20260626.md  curated_v4_all16_20260626.md  curated_v5_all16_20260626.md  curation_test_20260626.md  foregrounded_all16_20260626.md  methods_battery_20260626.md  phase2_eval_20260626.md  provider_matrix_20260627.md  results.jsonl  run_amplify_experiment.py  run_assistant_style.py  run_behavioral_ab.py  run_behavioral_all16.py  run_benchmark.py  run_curated_all16.py  run_curated_v2_all16.py  run_curated_v3_all16.py  run_curated_v4_all16.py  run_curated_v5_all16.py  run_curation_test.py  run_flow_matrix.py  run_foregrounded_all16.py  run_full_matrix.py  run_latency_test.py  run_latency_test_explain.py  run_methods_battery.py  run_parallel_test.py  run_phase2_eval.py  run_prefetch_verdict.py  run_provider_bench.py  run_quality_test.py  run_s_family_loop.py  run_strategy_bench.py  (+6 more)
mbti/docs/: FUTURE_IDEAS.md  MODEL_ROUTING.md  PERSONA_AND_PROMPT.md  PHASE2_BUILD_LOG.md  PHASE2_DESIGN.md  PersonaForge_정리본.md  WAKEUP_BEHAVIORAL.md
mbti/personaforge/: __init__.py  assistant.py  assistant_prompt.py  check.py  cli_backend.py  collect.py  mbti.py  (+16 more)
(+93 files in other folders)
