[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personaforge"
version = "1.0.0"
description = "Character & MBTI persona engine — a port of Sim Francisco's pipeline to roleplay personas"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
live = ["requests>=2.28"]
korean = ["kiwipiepy>=0.20"]
test = ["pytest>=7.0"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "httpx>=0.27"]
all = ["requests>=2.28", "kiwipiepy>=0.20", "pytest>=7.0",
       "fastapi>=0.110", "uvicorn[standard]>=0.27", "httpx>=0.27"]

[project.scripts]
personaforge-check = "personaforge.check:main"

[tool.setuptools.packages.find]
include = ["personaforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
